# url-shortener

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.prod.yaml  compose.yaml  entrypoint.sh  migrate.sh  pyproject.toml
.github/scripts/: build_ssm_payload.py
.github/workflows/: ci-cd.yaml  ci.yaml  ping.yml
alembic/: env.py
alembic/versions/: 54590ddd89d6_init_database.py  5641d4341066_remove_custom_alias.py  ac4d20959a10_make_code_nullable.py
app/: main.py
app/api/: links.py
app/api/v1/: links.py
app/core/: config.py  database.py  deps.py  paths.py  redis.py  utils.py
app/models/: link.py
app/repositories/: link_cache_repo.py  link_repo.py
app/schemas/: link.py
app/services/: link_service.py
app/static/: 404.html  index.html  script.js  style.css
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ac4d20959a10_make_code_nullable.py
backend/app/: main.py
backend/app/api/: links.py
backend/app/core/: __init__.py  config.py  database.py  utils.py
backend/app/models/: link.py
backend/tests/: conftest.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  config.ts  storage.test.ts  storage.ts  styles.css  types.ts  utils.test.ts  utils.ts  vendor-qrcode.min.d.ts  vendor-qrcode.min.js
nginx/conf.d/: default.conf
postgres/primary/: postgresql.conf
postgres/replica/: entrypoint.sh
tests/: conftest.py
tests/api/: test_links.py
(+13 files in other folders)
