[project]
name = "url-shorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqids>=0.5.2",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.34.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
